--- a/src/main/resources/templates/modifyPassword.html
+++ b/src/main/resources/templates/modifyPassword.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>修改密碼</title>
     <head th:insert="load/css :: css"></head>
-    <head th:insert="load/js :: js"></head>
     <link rel="stylesheet" th:href="@{/css/modifyPassword.css}">
 </head>
 <body>
@@ -41,6 +40,7 @@
     </section>
 
     <section th:replace="load/footer :: footer"></section>
+    <script th:replace="load/js :: js"></script>
     <script th:src="@{/js/modifyPassword.js}"></script>
 </body>
 </html>
