--- a/src/main/resources/templates/load/js.html
+++ b/src/main/resources/templates/load/js.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="js">
+<body th:fragment="js">
     <script th:src="@{/js/lib/jquery-3.4.1.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/validation.js}"></script>
-</head>
+</body>
 </html>
